# hcert-testdata

./: .gitignore  Dockerfile  Makefile  README.md  aztec_code_generator.py  base45.py  hcert.py  hcert_example_minimal.json  hcert_example_typical.json  hcert_schema.json  hcert_schema.yaml  hcert_spec.md  metadata_example.json  metadata_schema.json  metadata_schema.yaml  pyproject.toml  schemacheck.py  test.sh  vproof.py  vproof_example.json  vproof_jws.py  vproof_schema.yaml  vproof_spec.md
.github/workflows/: test.yml
hcert/: certs2jwks.py  cli.py  cwt.py  jwt.py  optical.py  scanner.py  utils.py  verifier.py
testdata/: Makefile  README.md  cert2kid.py  issuer1.key  issuer2.crt  issuer2.key  issuer3.crt  issuer3.key  issuer4.crt  issuer4.key  jwks.json  jwks_signed.json  jwks_signer_private.json  jwks_signer_public.json  jws.json  mkcert.sh
tools/: jws_verify.py
