[tool.isort]
profile = "black"

[tool.poetry]
name = "cosesign"
version = "0.1.0"
description = ""
authors = ["Kirei AB <info@kirei.se>"]

[tool.poetry.dependencies]
python = "^3.9"
xconfig = "^0.0.5"
jsonschema = "^3.2.0"
cose = "^0.9.dev2"
cbor2 = "^5.2.0"
cryptojwt = "^1.4.0"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
