[tool.isort]
profile = "black"

[tool.poetry]
name = "hcert"
version = "0.1.0"
description = ""
authors = ["Kirei AB <info@kirei.se>"]

[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "^3.2.0"
cose = "0.9.dev3"
cbor2 = "^5.2.0"
cryptojwt = "^1.4.0"
Pillow = "^8.1.1"
qrcode = "^6.1"
base45 = {git = "https://github.com/kirei/python-base45.git", rev = "main"}
aztec_code_generator = "^0.9"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
