[tool.isort]
profile = "black"

[tool.poetry]
name = "hcert-testdata"
version = "0.3.0"
description = "Electronic Health Certificate (EHC) proof of concept"
authors = ["Kirei AB <info@kirei.se>"]

[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "^3.2.0"
cryptojwt = "^1.4.0"
PyYAML = "^5.4.1"
hcert = {git = "https://github.com/ehn-digital-green-development/python-hcert", rev = "main"}

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
black = "^20.8b1"
isort = "^5.7.0"
pytest = "^6.2.2"
pytest-isort = "^1.3.0"
pytest-black = "^0.3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
